--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,66 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+	<ion-toolbar>
+		<ion-title> Blank </ion-title>
+	</ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+	<ion-header collapse="condense">
+		<ion-toolbar>
+			<ion-title size="large">Blank</ion-title>
+		</ion-toolbar>
+	</ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+	<ion-button id="open-modal" expand="block">Open Modal</ion-button>
+
+	<ion-modal trigger="open-modal">
+		<ng-template>
+			<ion-header>
+				<ion-toolbar>
+					<ion-buttons slot="start"> </ion-buttons>
+					<ion-title>Welcome</ion-title>
+					<ion-buttons slot="end"> </ion-buttons>
+				</ion-toolbar>
+			</ion-header>
+			<ion-content class="ion-padding">
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Aliquam totam porro, beatae veritatis facilis doloremque eum
+					id quae, earum vel optio sunt nihil. Totam facilis iure, eum
+					obcaecati ipsam nemo?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Aliquam totam porro, beatae veritatis facilis doloremque eum
+					id quae, earum vel optio sunt nihil. Totam facilis iure, eum
+					obcaecati ipsam nemo?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Aliquam totam porro, beatae veritatis facilis doloremque eum
+					id quae, earum vel optio sunt nihil. Totam facilis iure, eum
+					obcaecati ipsam nemo?
+				</p>
+				<ion-item>
+					<ion-input
+						label="Enter your name"
+						labelPlacement="stacked"
+						type="text"
+						placeholder="Your name"></ion-input>
+				</ion-item>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Aliquam totam porro, beatae veritatis facilis doloremque eum
+					id quae, earum vel optio sunt nihil. Totam facilis iure, eum
+					obcaecati ipsam nemo?
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit.
+					Aliquam totam porro, beatae veritatis facilis doloremque eum
+					id quae, earum vel optio sunt nihil. Totam facilis iure, eum
+					obcaecati ipsam nemo?
+				</p>
+			</ion-content>
+		</ng-template>
+	</ion-modal>
 </ion-content>
